Fix double scrollbar in the workspace view

--- a/src/wirecloud/oiltheme/static/css/dragboard.css
+++ b/src/wirecloud/oiltheme/static/css/dragboard.css
@@ -3,6 +3,10 @@
     border-radius: 0px;
 }
 
+#workspace {
+    overflow: hidden;
+}
+
 #workspace > .alert {
     margin: 2ex 5ex;
 }
